--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,11 +1,1 @@
-<ul>
-  <li>
-    <button>Login</button>
-  </li>
-  <li>
-    <p>TP Angular</p>
-  </li>
-  <li>
-    <p>Contact</p>
-  </li>
-</ul>
+<button class="btn-primary btn">test</button>
