Add footer and css

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,10 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      TP Angular
+    </div>
+    <div class="panel-body">
+      Couton Alexia - Contassot Alexandre - Fauquembergue Victor
+    </div>
+  </div>
+</footer>
