nav creation + basic css

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,16 @@
-<button class="btn-primary btn">test</button>
+<div id="blockNav">
+  <h1>TP Angular</h1>
+
+  <div>
+    <p>Menu :</p>
+    <div>
+      <button type="button" class="btn btn-default navbar-btn">Dogs VS Cats</button>
+      <button type="button" class="btn btn-default navbar-btn">MNIST</button>
+    </div>
+  </div>
+
+  <p>
+    Contact :
+    <a href="https://github.com/A1c0/Angular-data-analyser">github</a>
+  </p>
+</div>
