--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-nav></app-nav>
-<app-body></app-body>
+<div class="row">
+  <div class="col-sm-4">
+    <app-nav></app-nav>
+  </div>
+  <div class="col-sm-8">
+    <app-body></app-body>
+  </div>
+</div>
 <app-footer></app-footer>
