--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,13 +4,14 @@
   <div>
     <p>Menu :</p>
     <div>
-      <button type="button" class="btn btn-default navbar-btn">Dogs VS Cats</button>
-      <button type="button" class="btn btn-default navbar-btn">MNIST</button>
+      <button type="button" class="btn btn-default navbar-btn nav_button">Dogs VS Cats</button>
+      <button type="button" class="btn btn-default navbar-btn nav_button">MNIST</button>
+      <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/login">Login</a></button>
     </div>
   </div>
 
-  <p>
+  <div>
     Contact :
     <a href="https://github.com/A1c0/Angular-data-analyser">github</a>
-  </p>
+  </div>
 </div>
