--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,6 +7,7 @@
       <button type="button" class="btn btn-default navbar-btn nav_button">Dogs VS Cats</button>
       <button type="button" class="btn btn-default navbar-btn nav_button">MNIST</button>
       <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/login">Login</a></button>
+      <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/mnist">Mnist</a></button>
     </div>
   </div>
 
