--- a/src/app/mnist/mnist.component.html
+++ b/src/app/mnist/mnist.component.html
@@ -1,3 +1,13 @@
-<p>
-  mnist works!
-</p>
+<div class="row">
+  <div class="col-sm-6">
+    <app-mnist-draw></app-mnist-draw>
+  </div>
+  <div class="col-sm-6">
+    <app-mnist-graph></app-mnist-graph>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <app-mnist-image></app-mnist-image>
+  </div>
+</div>
