css modifications (nav footer body)

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="panel panel-default">
-    <div class="panel-body">
+    <div class="panel-body" id="TPAngular">
       TP Angular
     </div>
     <div class="panel-body">
