--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row page">
   <div class="col-sm-4">
     <app-nav></app-nav>
   </div>
@@ -6,4 +6,8 @@
     <app-body></app-body>
   </div>
 </div>
-<app-footer></app-footer>
+<div class="row">
+  <div class="col-sm-12">
+    <app-footer></app-footer>
+  </div>
+</div>
