--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,7 +1,16 @@
+.container {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+
 #blockNav {
   margin: 10px;
   padding: 30px;
-  border: 2px solid black;
+  border: 2px solid brown;
+  border-radius: 15px;
+  box-shadow: 5px 10px 18px #888888;
+  height: 100%;
 }
 
 h1 {
