--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,18 +1,20 @@
-<div id="blockNav">
-  <h1>TP Angular</h1>
+<div class="container">
+  <div id="blockNav">
+    <h1>TP Angular</h1>
 
-  <div>
-    <p>Menu :</p>
     <div>
-      <button type="button" class="btn btn-default navbar-btn nav_button">Dogs VS Cats</button>
-      <button type="button" class="btn btn-default navbar-btn nav_button">MNIST</button>
-      <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/login">Login</a></button>
-      <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/mnist">Mnist</a></button>
+      <p>Menu :</p>
+      <div>
+        <button type="button" class="btn btn-default navbar-btn nav_button">Dogs VS Cats</button>
+        <button type="button" class="btn btn-default navbar-btn nav_button">MNIST</button>
+        <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/login">Login</a></button>
+        <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/mnist">Mnist</a></button>
+      </div>
     </div>
-  </div>
 
-  <div>
-    Contact :
-    <a href="https://github.com/A1c0/Angular-data-analyser">github</a>
+    <div>
+      Contact :
+      <a href="https://github.com/A1c0/Angular-data-analyser">github</a>
+    </div>
   </div>
 </div>
