Add login service, update body, add body component

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,7 +1,5 @@
-<h1>Our data annalyser app</h1>
+<div class="container">
+  <h1>Our data annalyser app</h1>
 
-<p>
-  body works!
-</p>
-
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
