--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,23 @@
-<p>
-  login works!
-</p>
+<div class="panel panel-default">
+  <div class="panel-header">
+    Login
+  </div>
+  <div class="panel-body">
+
+    <form onsubmit="return false">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1"
+               [(ngModel)] = 'emailInput' placeholder="Email" name="email">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1"
+               [(ngModel)] = 'passwordInput' placeholder="Password" name="password">
+      </div>
+      <button class="btn btn-success" *ngIf="!authStatus"
+              (click)="onSignIn(emailInput, passwordInput)">Log in</button>
+      <button class="btn btn-danger" *ngIf="authStatus" (click)="onSignOut()">Log out</button>
+    </form>
+  </div>
+</div>
