new file structure + canvas

--- a/src/app/mnists/mnist-graph/mnist-graph.component.html
+++ b/src/app/mnists/mnist-graph/mnist-graph.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
     <p>Graph</p>
-    <button type="button" class="btn btn-info">Predict</button>
+    <button type="button" class="btn">Predict</button>
   </div>
 </div>
