--- a/src/app/mnists/mnist/mnist.component.html
+++ b/src/app/mnists/mnist/mnist.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-sm-6">
-    <app-mnist-draw></app-mnist-draw>
+    <p>Draw any digits here:</p>
+    <app-canvas></app-canvas>
   </div>
   <div class="col-sm-6">
     <app-mnist-graph></app-mnist-graph>
@@ -8,6 +9,7 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
+    <p>Select an image:</p>
     <app-mnist-image></app-mnist-image>
   </div>
 </div>
