Update login sessions, add firebase for login, add sign up component, add authgard service to secure some pages

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,7 +7,17 @@
       <div>
         <button type="button" class="btn btn-default navbar-btn nav_button">Dogs VS Cats</button>
         <button type="button" class="btn btn-default navbar-btn nav_button">MNIST</button>
-        <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/login">Login</a></button>
+        <button routerLinkActive="active" *ngIf="!isAuth">
+          <a routerLink="auth/signup">Créer un compte</a>
+        </button>
+        <button routerLinkActive="active" *ngIf="!isAuth">
+          <a routerLink="auth/login">Connexion</a>
+        </button>
+        <button *ngIf="isAuth">
+          <a (click)="onSignOut()"
+             style="cursor:pointer">
+            Déconnexion</a>
+        </button>
         <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/mnist">Mnist</a></button>
       </div>
     </div>
