predict button with function giving a random number

--- a/src/app/mnists/mnist-graph/mnist-graph.component.html
+++ b/src/app/mnists/mnist-graph/mnist-graph.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div>
     <p>Graph</p>
-    <button type="button" class="btn">Predict</button>
+    <button type="button" class="btn" (click)="onPredict()">Predict</button>
+    <p>résultat : {{ result }}</p>
   </div>
 </div>
