Add graph with random value

--- a/src/app/mnists/mnist-graph/mnist-graph.component.html
+++ b/src/app/mnists/mnist-graph/mnist-graph.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div>
     <p>Graph</p>
+    <plotly-plot [data]="data"></plotly-plot>
     <button type="button" class="btn" (click)="onPredict()">Predict</button>
-    <p>résultat : {{ result }}</p>
   </div>
 </div>
