--- a/src/app/mnists/mnist-graph/mnist-graph.component.html
+++ b/src/app/mnists/mnist-graph/mnist-graph.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <p>Graph</p>
+    <div id="chartContainer" style="height: 200px; width: 100%;"></div>
     <button type="button" class="btn" (click)="onPredict()">Predict</button>
     <p>résultat : {{ result }}</p>
   </div>
