Add ng-bootstrap for alerts, update login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <app-nav></app-nav>
   </div>
   <div class="col-sm-8">
+    <app-alert *ngIf="isAlerting" [typeAlerting]="typeAlerting"></app-alert>
     <app-body></app-body>
   </div>
 </div>
