--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="btn-group-vertical">
+  {{alertName}}
   <button class="btn btn-outline-primary btn-lg btn-block" (click)="useMethodCatsVsDogsCounter()">
     Cats Vs Dogs
   </button>
