Update CSS in nav, home, mnist.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     Cats Vs Dogs
   </button>
 
-  <button class="btn btn-outline-secondary btn-lg btn-block" (click)="useMethodMintsCounter()">
+  <button class="btn btn-outline-secondary btn-lg btn-block" (click)="useMethodMintsCounter()" routerLink="/mnist">
     Mints
   </button>
 </div>
