--- a/src/app/mnists/mnist-image/mnist-image.component.html
+++ b/src/app/mnists/mnist-image/mnist-image.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row col-sm-12">
+  <div class="row col-sm-12 images">
     <div class="col-sm-4 caseImg">
       <img src="../../../../mnist/0.jpg">
     </div>
