--- a/src/app/mnists/mnist/mnist.component.html
+++ b/src/app/mnists/mnist/mnist.component.html
@@ -1,9 +1,10 @@
+<h2>MNIST</h2>
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-xs-6 col-md-6" id="row_elm_1">
     <p>Draw any digits here:</p>
     <app-canvas></app-canvas>
   </div>
-  <div class="col-sm-6">
+  <div class="col-xs-6 col-md-4">
     <app-mnist-graph></app-mnist-graph>
   </div>
 </div>
