--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,25 +1,22 @@
 <div class="container">
   <div id="blockNav">
-    <h1>TP Angular</h1>
+    <h1 routerLink="/home">TP Angular</h1>
 
     <div>
       <p *ngIf="isAuth">Connecté : {{emailAuth}}</p>
       <p>Menu :</p>
       <div>
         <button type="button" class="btn btn-default navbar-btn nav_button">Dogs VS Cats</button>
-        <button type="button" class="btn btn-default navbar-btn nav_button">MNIST</button>
-        <button routerLinkActive="active" *ngIf="!isAuth">
+        <button type="button" class="btn btn-default navbar-btn nav_button" routerLink="/mnist">MNIST</button>
+        <button class="btn btn-default navbar-btn nav_button" routerLinkActive="active" *ngIf="!isAuth">
           <a routerLink="auth/signup">Créer un compte</a>
         </button>
-        <button routerLinkActive="active" *ngIf="!isAuth">
+        <button class="btn btn-default navbar-btn nav_button" routerLinkActive="active" *ngIf="!isAuth">
           <a routerLink="auth/login">Connexion</a>
         </button>
-        <button *ngIf="isAuth">
-          <a (click)="onSignOut()"
-             style="cursor:pointer">
-            Déconnexion</a>
+        <button class="btn btn-default navbar-btn nav_button" *ngIf="isAuth">
+          <a (click)="onSignOut()">Déconnexion</a>
         </button>
-        <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/mnist">Mnist</a></button>
       </div>
     </div>
 
