--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,6 +20,7 @@
             Déconnexion</a>
         </button>
         <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/mnist">Mnist</a></button>
+        <button type="button" class="btn btn-default navbar-btn nav_button"><a routerLink="/dogs_cats">Dogs & Cats</a></button>
       </div>
     </div>
 
