Some fix fro the links

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="btn-group-vertical">
   {{alertName}}
-  <button class="btn btn-outline-primary btn-lg btn-block" (click)="useMethodCatsVsDogsCounter()">
+  <button class="btn btn-outline-primary btn-lg btn-block" (click)="useMethodCatsVsDogsCounter()" routerLink="/dogs_cats">
     Cats Vs Dogs
   </button>
 
