--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   </button>
 
   <button class="btn btn-outline-secondary btn-lg btn-block" (click)="useMethodMintsCounter()" routerLink="/mnist">
-    Mints
+    Mnits
   </button>
 </div>
 
