graph cats & dos

--- a/src/app/dogs-cats/dogs-cats.component.html
+++ b/src/app/dogs-cats/dogs-cats.component.html
@@ -1,15 +1,15 @@
 <div>
 
-  <div>
+  <div class="bloc">
     <h1>Cats or Dogs ?</h1>
     <p>Implémentation d'algorithmes de 'Deep Learning' (MobileNet et ResNet50) pour la classification d'images.</p>
   </div>
 
-  <div>
+  <div class="bloc">
     <img [src]="randomImageNumber">
   </div>
 
-  <div>
+  <div class="bloc">
     <select class="custom-select" id="choose_model">
       <option selected>Selectionner un modèle</option>
       <option value="mobilenet">mobilenet</option>
@@ -17,7 +17,7 @@
     </select>
   </div>
 
-  <div>
+  <div class="bloc">
     <button class="btn" id="predict_btn">Predict</button>
     <label for="select-file-image" class="btn" id="load_your_image">
       Upload
@@ -26,16 +26,11 @@
     <button class="btn" id="load_test_image" (click)="randomPic()">Image aléatoire</button>
   </div>
 
-  <div>
+  <div class="bloc">
     <button class="btn btn-predict" (click)="predictPet()">Guess pet</button>
-    <div>
-      <p>Résultat :</p>
-      <ul>
-        <li>Chien : {{ dog }}%</li>
-        <li>Chat : {{ cat }}%</li>
-      </ul>
-    </div>
-    <h3>{{ pet }}</h3>
+    <p id="witchPet">De quel animal s'agit t-il ?</p>
+    <p>{{ pet }}</p>
+    <div id="chartContainer" style="height: 200px; width: 75%;"></div>
   </div>
 
 </div>
