--- a/src/app/dogs-cats/dogs-cats.component.css
+++ b/src/app/dogs-cats/dogs-cats.component.css
@@ -1,4 +1,4 @@
-div>div {
+.bloc {
   padding: 10px;
 }
 
@@ -17,4 +17,10 @@ img {
   border: 1px solid brown;
   box-shadow: 5px 5px 18px #888888;
   margin: 10px;
+}
+
+#witchPet {
+  color: brown;
+  font-size: 25px;
+  padding: 10px;
 }
