translations + css changes

--- a/src/app/dogs-cats/dogs-cats.component.css
+++ b/src/app/dogs-cats/dogs-cats.component.css
@@ -3,13 +3,14 @@
 }
 
 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 500px;
   max-height: 300px;
   border: 1px solid brown;
   border-radius: 10%;
   box-shadow: 5px 5px 18px #888888;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .btn {
@@ -17,6 +18,12 @@ img {
   border: 1px solid brown;
   box-shadow: 5px 5px 18px #888888;
   margin: 10px;
+}
+
+#predict_btn {
+  background-color: brown;
+  color: #ffffff;
+  box-shadow: 5px 5px 18px #888888;
 }
 
 #witchPet {
