--- a/src/app/mnists/mnist-graph/mnist-graph.component.html
+++ b/src/app/mnists/mnist-graph/mnist-graph.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div>
+    <p>Résultat :</p>
     <div id="chartContainer" style="height: 200px; width: 100%;"></div>
-    <button type="button" class="btn" (click)="onPredict()">Predict</button>
+    <button type="button" class="btn" (click)="onPredict()">Prédiction</button>
   </div>
 </div>
