--- a/src/app/mnists/mnist-image/mnist-image.component.html
+++ b/src/app/mnists/mnist-image/mnist-image.component.html
@@ -20,6 +20,6 @@
     </div>
   </div>
   <input type="file" class="btn" (change)="onFileSelected($event)">
-  <button type="button" class="btn" (click)="onUpload()">Upload</button>
-  <button type="button" class="btn" (click)="loadMorePic()">Load more</button>
+  <button type="button" class="btn" (click)="onUpload()">Télécharger</button>
+  <button type="button" class="btn" (click)="loadMorePic()">Charger plus</button>
 </div>
