--- a/src/app/mnists/mnist/mnist.component.html
+++ b/src/app/mnists/mnist/mnist.component.html
@@ -1,7 +1,7 @@
 <h2>MNIST</h2>
 <div class="row">
   <div class="col-xs-6 col-md-6" id="row_elm_1">
-    <p>Draw any digits here:</p>
+    <p>Dessinez un chiffre ici :</p>
     <app-canvas></app-canvas>
   </div>
   <div class="col-xs-6 col-md-4">
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
-    <p>Select an image:</p>
+    <p>Choisissez une image :</p>
     <app-mnist-image></app-mnist-image>
   </div>
 </div>
