--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,8 +16,8 @@
           <a (click)="onSignOut()">Déconnexion</a>
         </button>
         <button type="button" class="btn btn-default navbar-btn nav_button" (click)="mnistIncrement()" routerLink="/mnist">Mnist</button>
-        <button type="button" class="btn btn-default navbar-btn nav_button" (click)="dogVsCatsIncrement()" routerLink="/dogs_cats" >Dogs & Cats</button>
-        <button type="button" class="btn btn-default navbar-btn nav_button" routerLink="/method_graph">Stats</button>
+        <button type="button" class="btn btn-default navbar-btn nav_button" (click)="dogVsCatsIncrement()" routerLink="/dogs_cats" >Chat et chien</button>
+        <button type="button" class="btn btn-default navbar-btn nav_button" routerLink="/method_graph">Statistiques</button>
       </div>
     </div>
 
