--- a/src/app/dogs-cats/dogs-cats.component.html
+++ b/src/app/dogs-cats/dogs-cats.component.html
@@ -1,7 +1,7 @@
+<h2>Chat ou chien ?</h2>
 <div>
 
   <div class="bloc">
-    <h1>Cats or Dogs ?</h1>
     <p>Implémentation d'algorithmes de 'Deep Learning' (MobileNet et ResNet50) pour la classification d'images.</p>
   </div>
 
