--- a/src/app/mnists/mnist-image/mnist-image.component.css
+++ b/src/app/mnists/mnist-image/mnist-image.component.css
@@ -3,7 +3,6 @@
 }
 
 img {
-  border: 1px solid black;
   height: 150px;
 }
 
@@ -19,4 +18,5 @@ img {
   color: brown;
   border: 1px solid brown;
   box-shadow: 5px 5px 18px #888888;
+  margin: 5px;
 }
