--- a/src/app/mnists/mnist-image/mnist-image.component.css
+++ b/src/app/mnists/mnist-image/mnist-image.component.css
@@ -20,3 +20,16 @@ img {
   box-shadow: 5px 5px 18px #888888;
   margin: 5px;
 }
+
+.btn-image {
+  border: 0;
+  background-color: white;
+}
+.btn-image:focus {
+  outline: white;
+  outline-width: 0px;
+  border: 3px solid brown;
+  border-radius: 10%;
+  box-shadow: 5px 5px 18px #888888;
+  padding: 2px;
+}
