--- a/src/app/mnists/mnist-image/mnist-image.component.html
+++ b/src/app/mnists/mnist-image/mnist-image.component.html
@@ -1,22 +1,34 @@
 <div class="container">
   <div class="row col-sm-12 images">
     <div class="col-sm-4 caseImg">
-      <img [src]='imagesList[0]'>
+      <button type="button" class="btn-image" (click)="onPredict()">
+        <img [src]='imagesList[0]'>
+      </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <img [src]='imagesList[1]'>
+      <button type="button" class="btn-image" (click)="onPredict()">
+        <img [src]='imagesList[1]'>
+      </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <img [src]='imagesList[2]'>
+      <button type="button" class="btn-image" (click)="onPredict()">
+        <img [src]='imagesList[2]'>
+      </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <img [src]='imagesList[3]'>
+      <button type="button" class="btn-image" (click)="onPredict()">
+        <img [src]='imagesList[3]'>
+      </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <img [src]='imagesList[4]'>
+      <button type="button" class="btn-image" (click)="onPredict()">
+        <img [src]='imagesList[4]'>
+      </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <img [src]='imagesList[5]'>
+      <button type="button" class="btn-image" (click)="onPredict()">
+        <img [src]='imagesList[5]'>
+      </button>
     </div>
   </div>
   <input type="file" class="btn" (change)="onFileSelected($event)">
