button to clear the canvas

--- a/src/app/mnists/canvas/canvas.component.html
+++ b/src/app/mnists/canvas/canvas.component.html
@@ -1,3 +1,6 @@
-<p>
-  canvas works!
-</p>
+<div>
+  <canvas #canvas></canvas>
+</div>
+<div>
+  <button type="button" class="btn" (click)="clear()">Recommencer</button>
+</div>
