Adding the predict methode for Mnist for img

--- a/src/app/mnists/mnist-image/mnist-image.component.html
+++ b/src/app/mnists/mnist-image/mnist-image.component.html
@@ -1,33 +1,33 @@
 <div class="container">
   <div class="row col-sm-12 images">
     <div class="col-sm-4 caseImg">
-      <button type="button" class="btn-image" (click)="onPredict()">
-        <img [src]='imagesList[0]'>
+      <button type="button" class="btn-image" (click)="choose(0)">
+        <img [src]='imagesList[0]' id="img_mnist_0">
       </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <button type="button" class="btn-image" (click)="onPredict()">
-        <img [src]='imagesList[1]'>
+      <button type="button" class="btn-image" (click)="choose(1)">
+        <img [src]='imagesList[1]' id="img_mnist_1">
       </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <button type="button" class="btn-image" (click)="onPredict()">
-        <img [src]='imagesList[2]'>
+      <button type="button" class="btn-image" (click)="choose(2)">
+        <img [src]='imagesList[2]' id="img_mnist_2">
       </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <button type="button" class="btn-image" (click)="onPredict()">
-        <img [src]='imagesList[3]'>
+      <button type="button" class="btn-image" (click)="choose(3)">
+        <img [src]='imagesList[3]' id="img_mnist_3">
       </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <button type="button" class="btn-image" (click)="onPredict()">
-        <img [src]='imagesList[4]'>
+      <button type="button" class="btn-image" (click)="choose(4)">
+        <img [src]='imagesList[4]' id="img_mnist_4">
       </button>
     </div>
     <div class="col-sm-4 caseImg">
-      <button type="button" class="btn-image" (click)="onPredict()">
-        <img [src]='imagesList[5]'>
+      <button type="button" class="btn-image" (click)="choose(5)">
+        <img [src]='imagesList[5]' id="img_mnist_5">
       </button>
     </div>
   </div>
